@@ -579,10 +579,8 @@ public:
         friend struct DFG::OSRExit;
         friend class LinkBuffer;
     public:
-        Jump()
-        {
-        }
-        
+        Jump() = default;
+
 #if CPU(ARM_THUMB2)
         // Fixme: this information should be stored in the instruction stream, not in the Jump object.
         Jump(AssemblerLabel jmp, ARMv7Assembler::JumpType type = ARMv7Assembler::JumpNoCondition, ARMv7Assembler::Condition condition = ARMv7Assembler::ConditionInvalid)
@@ -679,14 +677,14 @@ public:
     private:
         AssemblerLabel m_label;
 #if CPU(ARM_THUMB2)
-        ARMv7Assembler::JumpType m_type;
-        ARMv7Assembler::Condition m_condition;
+        ARMv7Assembler::JumpType m_type { ARMv7Assembler::JumpNoCondition };
+        ARMv7Assembler::Condition m_condition { ARMv7Assembler::ConditionInvalid };
 #elif CPU(ARM64)
-        ARM64Assembler::JumpType m_type;
-        ARM64Assembler::Condition m_condition;
-        bool m_is64Bit;
-        unsigned m_bitNumber;
-        ARM64Assembler::RegisterID m_compareRegister;
+        ARM64Assembler::JumpType m_type { ARM64Assembler::JumpNoCondition };
+        ARM64Assembler::Condition m_condition { ARM64Assembler::ConditionInvalid };
+        bool m_is64Bit { false };
+        unsigned m_bitNumber { 0 };
+        ARM64Assembler::RegisterID m_compareRegister { ARM64Registers::InvalidGPRReg };
 #endif
     };
 
